# regula

./: .clang-format  CMakeLists.txt
include/regula/: modifiers.hpp  pattern.hpp  range.hpp  regula.hpp  type_traits.hpp
tests/: CMakeLists.txt
tests/include/: token.hpp
tests/src/: anyof.cpp  pattern.cpp
